--- a/views/cancel_modal.html
+++ b/views/cancel_modal.html
@@ -6,7 +6,7 @@
             <p>Tem certeza que deseja deletar este item?</p>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-danger" ng-click="ok()">Deletar</button>
+            <button class="btn btn-danger" id="modal_button" ng-click="ok()">Deletar</button>
             <button class="btn btn-primary" ng-click="cancel()">Cancelar</button>
         </div>
 
